Update to make java-9 friendly